smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-object4.smithy
// Parse error at line 4, column 1 near `string`: Expected one of [RPAREN()), COMMA(,)]
namespace com.foo
@foo(bar: "baz"
string MyString
